<resources>
    <string name="app_name">Face Detector API</string>
    <string name="DetectFaces">Detect Faces</string>
    <string name="Send">Send</string>
    <string name="placeholder">placeholder</string>
    <string name="make_photo">Make photo</string>
    <string name="image_size_undefined">Image size: -</string>
    <string name="path_undefined">Path: -</string>
    <string name="login">Login</string>
    <string name="select_photo">Select photo</string>
    <string name="path">Path: %s</string>
    <string name="image_size">Image size: %1$d x %2$d</string>
    <string name="chosen_path_extra">chosen_path</string>
    <string name="selected_path">"Selected path:\n%s"</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="select">Select</string>
    <string name="options">Options</string>
    <string name="result_path">Result path:</string>
    <string name="max_faces">Max faces:</string>
    <string name="apply_path">apply path</string>
    <string name="reset_path">reset path</string>
</resources>
