<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/resultPathLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/result_path"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/resultPathEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/resultPathLabel"
        android:inputType="text" />

    <TextView
        android:id="@+id/maxFacesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/resetPathButton"
        android:text="@string/max_faces"
        android:textSize="24sp" />

    <Button
        android:id="@+id/resetPathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultPathEditText"
        android:layout_toEndOf="@+id/applyPathButton"
        android:layout_toRightOf="@+id/applyPathButton"
        android:text="@string/reset_path" />

    <Button
        android:id="@+id/applyPathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resetPathButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/apply_path" />

    <SeekBar
        android:id="@+id/maxFacesSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resultPathEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/resultPathEditText"
        android:layout_below="@+id/maxFacesLabel"
        android:indeterminate="false"
        android:max="20"
        android:progress="0" />

</RelativeLayout>
